--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,18 +5,18 @@
 	id="WebApp_ID" version="4.0">
 	<display-name>LeavePulseWebApp</display-name>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>login.html</welcome-file>
+		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 	
 	<error-page>
 		<error-code>404</error-code>
-		<location>/page_not_found.jsp</location>
+		<location>/404_error.jsp</location>
 	</error-page>
 	
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error.jsp</location>
+		<location>/500_error.jsp</location>
 	</error-page>
 	
 </web-app>
